--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Adalab Web Starter Kit</title>
+  <title>Personajes de Disney</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./scss/main.scss" />
-  <link rel="icon" href="./images/favicon.png" />
+  <link rel="icon" href="./images/favicon-96x96.png" />
 </head>
 
 <body>
-  <div class="page">
-    <load src="./partials/header.html" title="Bienvenidos a Adalab" />
-    <load src="./partials/main.html" />
-    <load src="./partials/footer.html" />
+  <div>
+
   </div>
   <script src="./js/main.js"></script>
 </body>
