--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,23 @@
   <link rel="icon" href="./images/favicon-96x96.png" />
 </head>
 
-<body>
-  <div>
 
-  </div>
+
+<body>
+
+  <header>
+
+    <div class="header__image"></div>
+
+  </header>
+
+  <main>
+
+
+
+
+  </main>
+
   <script src="./js/main.js"></script>
 </body>
 
