--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,32 @@
   <main>
 
 
+    <section>
 
+      <form class="section-search-form-btn">
+
+        <input class="js_searchInput section-search-input" type="text" name="submit-search" id="submit-search"
+          placeholder="Ejemplo: Mickey Mouse">
+        <input class="js_btnSearch section-btn" type="submit" value="Buscar">
+
+      </form>
+
+    </section>
+
+    <section>
+
+      <ul>
+
+      </ul>
+
+
+    </section>
+
+    <footer>
+
+
+
+    </footer>
 
   </main>
 
