--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Personajes de Disney</title>
+
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./scss/main.scss" />
   <link rel="icon" href="./images/favicon-96x96.png" />
@@ -37,7 +38,34 @@
 
     <section>
 
-      <ul>
+      <h1 class="character__title">
+        Personajes
+      </h1>
+
+      <ul class="character__list">
+
+        <li class="character__card">
+
+          <div class="character__img"> <img
+              src="https://static.wikia.nocookie.net/disney/images/d/d3/Vlcsnap-2015-05-06-23h04m15s601.png"
+              alt="Achilles">
+          </div>
+
+
+          <p class="character__name">Achilles</p>
+
+        </li>
+
+        <li class="character__card">
+
+          <div class="character__img"> <img
+              src="https://static.wikia.nocookie.net/disney/images/0/05/Fox-disneyscreencaps_com-901.jpg"
+              alt="Abigail the Cow">
+          </div>
+
+          <p class="character__name">Abigail the Cow</p>
+
+        </li>
 
       </ul>
 
