Render one card

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 
         <input class="js_searchInput section-search-input" type="text" name="submit-search" id="submit-search"
           placeholder="Ejemplo: Mickey Mouse">
-        <input class="js_btnSearch section-btn" type="submit" value="Buscar">
+        <input class="js_btnSearch section-search-btn" type="submit" value="Buscar">
 
       </form>
 
@@ -42,30 +42,7 @@
         Personajes
       </h1>
 
-      <ul class="character__list">
-
-        <li class="character__card">
-
-          <div class="character__img"> <img
-              src="https://static.wikia.nocookie.net/disney/images/d/d3/Vlcsnap-2015-05-06-23h04m15s601.png"
-              alt="Achilles">
-          </div>
-
-
-          <p class="character__name">Achilles</p>
-
-        </li>
-
-        <li class="character__card">
-
-          <div class="character__img"> <img
-              src="https://static.wikia.nocookie.net/disney/images/0/05/Fox-disneyscreencaps_com-901.jpg"
-              alt="Abigail the Cow">
-          </div>
-
-          <p class="character__name">Abigail the Cow</p>
-
-        </li>
+      <ul class="js_characterUl character__list">
 
       </ul>
 
