--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Personajes de Disney</title>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="./scss/main.scss" />
   <link rel="icon" href="./images/favicon-96x96.png" />
 </head>
