Create favourite characters column

--- a/src/index.html
+++ b/src/index.html
@@ -24,29 +24,39 @@
 
   <main>
 
+    <form class="section-search-form-btn">
 
-    <section>
+      <input class="js_searchInput section-search-input" type="text" name="submit-search" id="submit-search"
+        placeholder="Ejemplo: Mickey Mouse">
+      <input class="js_btnSearch section-search-btn" type="submit" value="Buscar">
 
-      <form class="section-search-form-btn">
+    </form>
 
-        <input class="js_searchInput section-search-input" type="text" name="submit-search" id="submit-search"
-          placeholder="Ejemplo: Mickey Mouse">
-        <input class="js_btnSearch section-search-btn" type="submit" value="Buscar">
 
-      </form>
+    <section class="main">
 
-    </section>
+      <div>
 
-    <section>
+        <h1 class="characters__title">
+          Personajes
+        </h1>
 
-      <h1 class="character__title">
-        Personajes
-      </h1>
+        <ul class="js_characterUl character__list">
 
-      <ul class="js_characterUl character__list">
+        </ul>
 
-      </ul>
 
+      </div>
+
+      <div>
+
+        <h2 class="charactersFavourite__title">Mis personajes favoritos</h2>
+
+        <ul>
+
+        </ul>
+
+      </div>
 
     </section>
 
