Obtain id of objects for favourites section

--- a/src/index.html
+++ b/src/index.html
@@ -48,11 +48,13 @@
 
       </div>
 
-      <div>
+      <div class="charactersFavourite_section">
 
-        <h2 class="charactersFavourite__title">Mis personajes favoritos</h2>
+        <h2 class="charactersFavourite__title">
+          Mis personajes favoritos
+        </h2>
 
-        <ul>
+        <ul class="js_favouriteCharacterUl">
 
         </ul>
 
