Add backgroud styles

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
   </header>
 
-  <main>
+  <main class="main">
 
     <form class="section-search-form-btn">
 
@@ -33,7 +33,7 @@
     </form>
 
 
-    <section class="main">
+    <section class="characters__section">
 
       <div>
 
