Add queries selector for search

--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,11 @@
 
   <main class="main">
 
-    <form class="section-search-form-btn">
+    <form class="search__form">
 
-      <input class="js_searchInput section-search-input" type="text" name="submit-search" id="submit-search"
+      <input class="js_inputSearch seach__input" type="text" name="submit-search" id="submit-search"
         placeholder="Ejemplo: Mickey Mouse">
-      <input class="js_btnSearch section-search-btn" type="submit" value="Buscar">
+      <input class="js_btnSearch search__btn" type="submit" value="Buscar">
 
     </form>
 
