Add error message

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,8 @@
           Personajes
         </h1>
 
+        <p class="js_characterNotFound"></p>
+
         <ul class="js_characterUl character__list">
 
         </ul>
