--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Personajes de Disney</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="./scss/main.scss" />
   <link rel="icon" href="./images/favicon-96x96.png" />
@@ -26,7 +25,7 @@
 
     <form class="search__form">
 
-      <input class="js_inputSearch seach__input" type="text" name="submit-search" id="submit-search"
+      <input class="js_inputSearch search__input" type="text" name="submit-search" id="submit-search"
         placeholder="Ejemplo: Mickey Mouse">
       <input class="js_btnSearch search__btn" type="submit" value="Buscar">
 
