--- a/src/index.html
+++ b/src/index.html
@@ -65,10 +65,8 @@
 
     </section>
 
-    <footer>
-
-
-
+    <footer class="footer">
+      <p>María García Antúnez © Adalab 2024</p>
     </footer>
 
   </main>
