Create styles for favourite card and delete image

--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
+
 <html lang="es">
 
 <head>
+
   <meta charset="UTF-8" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <title>Personajes de Disney</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
   <link rel="stylesheet" href="./scss/main.scss" />
   <link rel="icon" href="./images/favicon-96x96.png" />
-</head>
 
+</head>
 
 
 <body>
@@ -57,7 +62,7 @@
           Mis personajes favoritos
         </h2>
 
-        <ul class="js_favouriteCharacterUl">
+        <ul class="js_favouriteCharacterUl charactersFavourite_list">
 
         </ul>
 
