Add button to delete all favourites

--- a/src/index.html
+++ b/src/index.html
@@ -61,10 +61,11 @@
         <h2 class="charactersFavourite__title">
           Mis personajes favoritos
         </h2>
-
         <ul class="js_favouriteCharacterUl charactersFavourite_list">
 
         </ul>
+
+        <button class="js_deleteFavouritesBtn search__btn">Borrar todos los favoritos</button>
 
       </div>
 
