Add functionality to delete all favourites button

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
 
         </ul>
 
-        <button class="js_deleteFavouritesBtn search__btn">Borrar todos los favoritos</button>
+        <button class="js_deleteAllFavouritesBtn search__btn">Borrar todos los favoritos</button>
 
       </div>
 
