Add image Stitch

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
 
       </div>
 
-      <div class="charactersFavourite_section">
+      <div class="charactersFavourite__section">
 
         <h2 class="charactersFavourite__title">
           Mis personajes favoritos
@@ -65,7 +65,13 @@
 
         </ul>
 
-        <button class="js_deleteAllFavouritesBtn search__btn">Borrar todos los favoritos</button>
+        <p class="charactersFavourite__text">Marca tus favoritos con el corazón y pasarán a este listado</p>
+
+        <img class="charactersFavourite__image" src="../images/stitch section favourites.png"
+          alt="Stitch con corazones en sección de personajes favoritos">
+
+        <button class="js_deleteAllFavouritesBtn charactersFavourite__delete-btn" style="display: none">Borrar
+          favoritos</button>
 
       </div>
 
