--- a/src/index.html
+++ b/src/index.html
@@ -65,9 +65,11 @@
 
         </ul>
 
-        <p class="charactersFavourite__text">Marca tus favoritos con el corazón y pasarán a este listado</p>
+        <p class="js_descriptionTextFavourites charactersFavourite__text">Marca tus favoritos con el corazón <i
+            class="fa-solid fa-heart" style="color: red;"></i> y pasarán a formar parte de este
+          listado</p>
 
-        <img class="charactersFavourite__image" src="../images/stitch section favourites.png"
+        <img class="js_imageStitchFavourites charactersFavourite__image" src="../images/stitch section favourites.png"
           alt="Stitch con corazones en sección de personajes favoritos">
 
         <button class="js_deleteAllFavouritesBtn charactersFavourite__delete-btn" style="display: none">Borrar
