Fix footer styles

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
       <div>
 
         <h1 class="characters__title">
-          Personajes
+          Listado de personajes de Disney
         </h1>
 
         <p class="js_characterNotFound"></p>
