Add image Mickey Mouse and styles

--- a/src/index.html
+++ b/src/index.html
@@ -39,17 +39,19 @@
     </form>
 
 
-    <section class="characters__section">
+    <section class="bothcharacters__sections">
 
-      <div>
+      <div class="Allcharacters_section">
+        <img class="Allcharacters__imageMickey" src="../images/mickey_mouse_section characters.png"
+          alt="Imagen de Mickey Mouse tumbado en sección de personajes de Disney">
 
-        <h1 class="characters__title">
+        <h1 class="Allcharacters__title">
           Listado de personajes de Disney
         </h1>
 
         <p class="js_characterNotFound"></p>
 
-        <ul class="js_characterUl character__list">
+        <ul class="js_characterUl Allcharacters__list">
 
         </ul>
 
@@ -59,7 +61,7 @@
       <div class="charactersFavourite__section">
 
         <h2 class="charactersFavourite__title">
-          Mis personajes favoritos
+          Tus personajes favoritos
         </h2>
         <ul class="js_favouriteCharacterUl charactersFavourite_list">
 
