Fix Mickey styles

--- a/src/index.html
+++ b/src/index.html
@@ -42,12 +42,17 @@
     <section class="bothcharacters__sections">
 
       <div class="Allcharacters_section">
-        <img class="Allcharacters__imageMickey" src="../images/mickey_mouse_section characters.png"
-          alt="Imagen de Mickey Mouse tumbado en sección de personajes de Disney">
 
-        <h1 class="Allcharacters__title">
-          Listado de personajes de Disney
-        </h1>
+        <div class="Allcharacters__header">
+
+          <h1 class="Allcharacters__title">
+            Listado de personajes de Disney
+          </h1>
+
+          <img class="Allcharacters__imageMickey" src="../images/mickey_mouse_section characters.png"
+            alt="Imagen de Mickey Mouse tumbado en sección de personajes de Disney">
+
+        </div>
 
         <p class="js_characterNotFound"></p>
 
