Add favourites counter

--- a/src/index.html
+++ b/src/index.html
@@ -68,13 +68,16 @@
         <h2 class="charactersFavourite__title">
           Tus personajes favoritos
         </h2>
+
+        <p class="js_favouritesCounter charactersFavourite_counter" style="display: none"></p>
+
         <ul class="js_favouriteCharacterUl charactersFavourite_list">
 
         </ul>
 
-        <p class="js_descriptionTextFavourites charactersFavourite__text">Marca tus favoritos con el corazón <i
-            class="fa-solid fa-heart" style="color: red;"></i> y pasarán a formar parte de este
-          listado</p>
+        <p class="js_descriptionTextFavourites charactersFavourite__text">Marca tus favoritos con el corazón
+          <i class="fa-solid fa-heart" style="color: red;"></i> y pasarán a formar parte de este listado
+        </p>
 
         <img class="js_imageStitchFavourites charactersFavourite__image" src="../images/stitch section favourites.png"
           alt="Stitch con corazones en sección de personajes favoritos">
