--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
         <img class="js_imageStitchFavourites charactersFavourite__image" src="../images/stitch section favourites.png"
           alt="Stitch con corazones en sección de personajes favoritos">
 
-        <button class="js_deleteAllFavouritesBtn charactersFavourite__delete-btn" style="display: none">Borrar
+        <button class="js_deleteAllFavouritesBtn charactersFavourite__delete-btn" style="display: none">Borrar todos los
           favoritos</button>
 
       </div>
