Change classes names

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 
     <section class="bothcharacters__sections">
 
-      <div class="Allcharacters_section">
+      <div class="Allcharacters__section">
 
         <div class="Allcharacters__header">
 
@@ -69,9 +69,9 @@
           Tus personajes favoritos
         </h2>
 
-        <p class="js_favouritesCounter charactersFavourite_counter" style="display: none"></p>
+        <p class="js_favouritesCounter charactersFavourite__counter" style="display: none"></p>
 
-        <ul class="js_favouriteCharacterUl charactersFavourite_list">
+        <ul class="js_favouriteCharacterUl charactersFavourite__list">
 
         </ul>
 
